BuildHughes/translation-tool/inputs/source_meta/objects/Digital_Contract_Store__c.object
<CustomObject>
    <fields>
        <fullName>Accept_Minimum_Stay_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Minimum Stay Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adherence_Fee__c</fullName>
        <label>Adherence Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentId__c</fullName>
        <label>AgentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anytime_Bytes__c</fullName>
        <label>Anytime Bytes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_District__c</fullName>
        <label>Billing District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Address__c</fullName>
        <label>Billing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes_Hours__c</fullName>
        <label>Bonus Bytes Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Bytes__c</fullName>
        <label>Bonus Bytes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Duration__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>Commitment Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Date_Of_Birth__c</fullName>
        <label>Customer Date Of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Price_With_Tax__c</fullName>
        <label>Display Price With Tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Name_and_Code__c</fullName>
        <label>Distributor Name and Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Expiry_Date__c</fullName>
        <label>Document Expiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Issue_Date__c</fullName>
        <label>Document Issue Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Speed__c</fullName>
        <label>Download Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Lease_Price__c</fullName>
        <label>Equipment Lease Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Purchase_Price__c</fullName>
        <label>Equipment Purchase Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Address__c</fullName>
        <label>Install Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Purchase__c</fullName>
        <label>Lease Purchase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Monthly_Price__c</fullName>
        <label>Minimum Monthly Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <label>Monthly Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Invoice_Charge__c</fullName>
        <label>Paper Invoice Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paperless_Invoice_Discount__c</fullName>
        <label>Paperless Invoice Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Contract_Number__c</fullName>
        <label>Physical Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reactivation_charge__c</fullName>
        <label>Reactivation charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSEnabledPhone__c</fullName>
        <label>SMSEnabledPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_City__c</fullName>
        <label>Service City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_District__c</fullName>
        <label>Service District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <label>Service State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Strata__c</fullName>
        <label>Service Strata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street_Address__c</fullName>
        <label>Service Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bytes__c</fullName>
        <label>Total Bytes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Data_Allowance__c</fullName>
        <label>Total Data Allowance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Speed__c</fullName>
        <label>Upload Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Digital Contract Store</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-9{000000000}</displayFormat>
        <label>Digital Contract Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Contract Stores</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>